# Enforence

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/samples/: README.md
data/templates/: kmu_205_structure.json
deployment/render/: render.yaml
deployment/runpod/: Dockerfile
docs/: README.md  architecture.md  kmu_205_guide.md  openapi.yaml
docs/adr/: 001-llm-strategy.md  002-rag-approach.md  003-agent-topology.md
scripts/: ingest_samples.py  setup_db.py  setup_qdrant.py  test_mamay.py
src/: config.py  main.py
src/agents/: base.py  compliance_checker.py  document_assembler.py  rag_retriever.py  requirements_analyst.py  section_generator.py
src/api/: app.py  dependencies.py
src/api/routes/: documents.py  generation.py  health.py  projects.py
src/db/: base.py  models.py  session.py
src/llm/: base.py  claude_client.py  mamay_client.py  router.py
src/models/: document.py  generation.py  kmu_205.py  project.py
src/rag/: chunker.py  embeddings.py  ingestion.py  retriever.py
src/services/: document_service.py  export_service.py  generation_service.py  project_service.py
src/utils/: docx_export.py  exceptions.py  logger.py
tests/: conftest.py
tests/test_agents/: test_compliance_checker.py
tests/test_api/: test_health.py  test_projects.py
tests/test_rag/: test_chunker.py
tests/test_services/: test_project_service.py
